[1.4.10] README and more
